--- a/cloudrun-proxy/package.json
+++ b/cloudrun-proxy/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "tsx watch server.ts",
     "build": "tsc -p tsconfig.json",
+    "test:smoke": "npm run build && node dist/smoke.js",
     "start": "node dist/server.js"
   },
   "dependencies": {
@@ -19,5 +20,7 @@
     "typescript": "~5.8.2"
   }
 }
+
+
 
 
